# logfile-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: hello.h
common/src/: hello.cpp
test/: CMakeLists.txt  test_fmt.cpp  test_glfw.cpp  test_hello.cpp  test_imgui.cpp  test_spdlog.cpp
